--- a/html/index.html
+++ b/html/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
 
-<head>
-    <meta charset="en">
+<head lang="en">
+    <meta charset="UTF-8">
     <title> QR Code </title>
     <link rel="stylesheet" href="..\css\qrcss.css">
     <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@500&display=swap" rel="stylesheet">
