--- a/html/index.html
+++ b/html/index.html
@@ -4,8 +4,8 @@
 <head lang="en">
     <meta charset="UTF-8">
     <title> QR Code </title>
-    <link rel="stylesheet" href="..\css\qrcss.css"\>
-    <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@500&display=swap" rel="stylesheet" \>
+    <link rel="stylesheet" href="..\css\qrcss.css">
+    <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@500&display=swap" rel="stylesheet">
 </head>
 
 <body>
