--- a/html/index.html
+++ b/html/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 
-<head lang="en">
+<head>
     <meta charset="UTF-8">
     <title> QR Code </title>
     <link rel="stylesheet" href="..\css\qrcss.css">
